fix: footer, adding paddingBottom to main to prevent footer from overlapping content

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,3 +1,6 @@
+body {
+  padding-bottom: 60px; /* lebih besar sedikit dari height footer */
+}
 .footer {
   position: fixed;
   bottom: 0;
