--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,4 +7,5 @@ body {
   margin: 0;
   padding-top: 80px;
   font-family: "Montserrat", sans-serif;
+  padding-bottom: 60px;
 }
